--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,14 +51,14 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/quad_walk.cpp)
+add_executable(${PROJECT_NAME}_node src/quad_walk.cpp)
 add_executable(${PROJECT_NAME}_effort_node src/quad_walk_effort.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME rise PREFIX "")
+set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME rise PREFIX "")
 set_target_properties(${PROJECT_NAME}_effort_node PROPERTIES OUTPUT_NAME effort_rise PREFIX "")
 
 ## Add cmake target dependencies of the executable
@@ -66,11 +66,17 @@ set_target_properties(${PROJECT_NAME}_effort_node PROPERTIES OUTPUT_NAME effort_
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(# ${PROJECT_NAME}_node
+target_link_libraries(
  ${PROJECT_NAME}_effort_node
  ${catkin_LIBRARIES}
 )
 
+target_link_libraries(
+ ${PROJECT_NAME}_node
+ ${catkin_LIBRARIES}
+)
+# add_executable(parser src/urdf_parser.cpp)
+# target_link_libraries(parser ${catkin_LIBRARIES})
 #############
 ## Install ##
 #############
