working inverse kinematics, but copies every single vector right now; PID controllers for effort joints needs to be tuned, still jittery, causing instability in robot; next step is trajectory generation to step coordination

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,8 @@ target_link_libraries(
  ${PROJECT_NAME}_node
  ${catkin_LIBRARIES}
 )
-# add_executable(parser src/urdf_parser.cpp)
-# target_link_libraries(parser ${catkin_LIBRARIES})
+add_executable(zero_joints src/zero_joints.cpp)
+target_link_libraries(zero_joints ${catkin_LIBRARIES})
 #############
 ## Install ##
 #############
